<resources>
    <string name="app_name">The_journey</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemTitle">Item title!</string>
    <string name="startDateText">Start Date: </string>
    <string name="endDateText">End Date: </string>
    <string name="defaultDate">dd/MM/yyyy</string>
    <string name="defaultTitleText">No Title Found: </string>
    <string name="defaultDetailsText">No details Found: </string>
    <string name="feedBackTitle">Add a new Holiday</string>
    <string name="inputHolidayNameHint">Input holiday name: \"Spain\"</string>
    <string name="inputDetailsHint">Input holiday details...</string>
    <string name="feedbackbutton">Add Holiday!</string>
    <string name="title_activity_add_holiday_form">AddHolidayForm</string>
    <string name="add_holiday_btn_text">Add Holiday Now!</string>
    <string name="ListPageBtn">Go to List Fragment</string>
    <string name="holidayStartDateInput">Start Date</string>
    <string name="add_hol">Add Holiday</string>
    <string name="title_activity_main__fragment">MainActivity_Fragment</string>
    <string name="DeleteHolButton">Delete Holiday</string>
    <string name="updateHolButton">Update Holiday</string>
    <string name="title_activity_holiday__edit_details_activity">Holiday_Edit_details_activity
    </string>
    <string name="title_activity_place_autocomplete_activity">Place_autocomplete_activity</string>
    <string name="title_activity_place_picker_">PlacePicker_Activity</string>
    <string name="place_picker_btn_txt">Launch Place Picker</string>
    <string name="title_activity_maps_activity">Map</string>
    <string name="title_activity_place__picker_activity">Place_Picker_activity</string>
    <string name="click_fab_to_pick_your_place">Click FAB to pick your Place</string>
    <string name="add_place">Add Place</string>
    <string name="title_activity_places_list_activity">Places_list_activity</string>
    <string name="title_activity_photo_gallery_activity">Photo_gallery_activity</string>

    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="place_list_btn_txt">Place List</string>
    <string name="gallery_launch_btn_txt">Launch Gallery</string>

</resources>
