<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".AddHolidayForm">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedBackTitle"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/holidayNameInput"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:hint="@string/inputHolidayNameHint"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/holidayDetailsInput"
            android:layout_width="fill_parent"
            android:hint="@string/inputDetailsHint"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="6"/>

        <TextView
            android:id="@+id/startDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDateText"/>

        <Button
            android:id="@+id/pick_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultDate" />

        <TextView
            android:id="@+id/endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endDateText" />

        <Button
            android:id="@+id/pick_date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultDate"
            tools:ignore="DuplicateIds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/ListPageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ListPageBtn"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

