<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deansohn.the_journey.activities.Home_holiday.Main_Activity_Page">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main__activity__page" />

    <Button
    android:id="@+id/add_holiday_btn_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|start"
    android:text="@string/add_holiday_btn_text"
    style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/place_Picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/place_picker_btn_txt"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
        android:id="@+id/place_list_launch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:text="@string/place_list_btn_txt"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
        android:id="@+id/gallery_launch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:text="@string/gallery_launch_btn_txt"
        style="@style/Widget.AppCompat.Button.Colored"/>

</android.support.design.widget.CoordinatorLayout>
