<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.deansohn.the_journey.Fragments.item_detailsFragment">

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="33dp"
                android:text="@string/defaultTitleText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/detailsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/defaultDetailsText" />
        </android.support.design.widget.TextInputLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/startDateText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/startDate"
                android:layout_alignBottom="@+id/startDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:text="@string/startDateText" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="19dp"
                android:layout_toEndOf="@+id/startDateText"
                android:text="@string/defaultDate" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/endDateText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/endDate"
                android:layout_alignBottom="@+id/endDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:text="@string/endDateText" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="19dp"
                android:layout_toEndOf="@+id/endDateText"
                android:text="@string/defaultDate" />

        </RelativeLayout>
        <Button
            android:id="@+id/delete_holiday_button"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/DeleteHolButton"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</ScrollView>

